<resources>
    <string name="app_name">Newsie</string>

    <!--  Bottom Bar Navigation Name  -->
    <string name="bottomBarNavigation_Home">Home</string>
    <string name="bottomBarNavigation_Bookmark">Bookmark</string>
    <string name="tv_title_section_breaking_news">Breaking News</string>
    <string name="see_all">See All</string>
    <string name="featured_images">Featured Images</string>
    <string name="categories_of_content">Categories of Content</string>
    <string name="search">Search</string>
    <string name="bottomBarNavigation_Account">Account</string>
    <string name="tv_title_content">Content</string>
    <string name="help">Help</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- Category News-->
    <string-array name="category_news">
        <item>Business</item>
        <item>Entertainment</item>
        <item>General</item>
        <item>Health</item>
        <item>Science</item>
        <item>Sports</item>
        <item>Technology</item>
    </string-array>
</resources>