<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/shimmer_grey"
    android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar">

    <androidx.cardview.widget.CardView
        android:id="@+id/section_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_vertical_small"
        android:elevation="1dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_vertical_small">

            <TextView
                android:id="@+id/tv_titleContentSettings"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_title_content" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_titleContentSettings"
                android:layout_marginHorizontal="3dp"
                android:layout_marginVertical="@dimen/margin_vertical_small"
                app:cardCornerRadius="@dimen/margin_vertical_small"
                app:cardElevation="1dp"
                app:strokeColor="@color/shimmer_grey"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_language_menu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/margin_vertical_small"
                        android:paddingHorizontal="@dimen/margin_vertical_small"
                        android:text="Language"
                        android:textColor="@color/black"
                        app:drawableEndCompat="@drawable/baseline_chevron_right_24"
                        app:drawableTint="@color/colorPrimary" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/shimmer_grey" />

                    <TextView
                        android:id="@+id/tv_topic_menu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/margin_vertical_small"
                        android:paddingHorizontal="@dimen/margin_vertical_small"
                        android:text="Featured Topic"
                        android:textColor="@color/black"
                        app:drawableEndCompat="@drawable/baseline_chevron_right_24"
                        app:drawableTint="@color/colorPrimary" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/section_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_vertical_small"
        android:elevation="1dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/section_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_vertical_small">

            <TextView
                android:id="@+id/tv_titleHelpSetting"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_titleHelpSetting"
                android:layout_marginHorizontal="3dp"
                android:layout_marginVertical="@dimen/margin_vertical_small"
                app:cardCornerRadius="@dimen/margin_vertical_small"
                app:cardElevation="1dp"
                app:strokeColor="@color/shimmer_grey"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_privacy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/margin_vertical_small"
                        android:paddingHorizontal="@dimen/margin_vertical_small"
                        android:text="@string/privacy_policy"
                        android:textColor="@color/black"
                        app:drawableEndCompat="@drawable/baseline_chevron_right_24"
                        app:drawableTint="@color/colorPrimary" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/shimmer_grey" />

                    <TextView
                        android:id="@+id/tv_app_version"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/margin_vertical_small"
                        android:paddingHorizontal="@dimen/margin_vertical_small"
                        android:textColor="@color/black"
                        tools:text="App Version v2.5" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>