<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/section_breaking_news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_vertical_small"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_vertical_small"
            android:layout_marginEnd="@dimen/margin_vertical_small"
            android:layout_weight="1"
            android:background="@color/shimmer_grey"
            android:elevation="3dp"
            android:text="@string/tv_title_section_breaking_news"
            android:textColor="@color/shimmer_grey" />

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_vertical_small"
            android:layout_marginStart="@dimen/margin_vertical_small"
            android:layout_weight="1"
            android:background="@color/shimmer_grey"
            android:elevation="3dp"
            android:text="@string/see_all"
            android:textAlignment="textEnd"
            android:textColor="@color/shimmer_grey"
            android:textStyle="normal" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_content_featured_news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_vertical_small"
        app:cardCornerRadius="@dimen/margin_vertical_small"
        app:cardElevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/section_breaking_news">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/shimmer_grey">

            <ImageView
                android:id="@+id/iv_itemFeatureCover"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:alpha="0.1"
                android:contentDescription="@string/featured_images"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_itemFeatureTitle"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_vertical_small"
                android:background="@color/shimmer_grey"
                android:elevation="3dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/shimmer_grey"
                app:layout_constraintBottom_toTopOf="@id/section_itemFeaturedDetail"
                app:layout_constraintEnd_toEndOf="@id/section_itemFeaturedDetail"
                app:layout_constraintStart_toStartOf="@id/section_itemFeaturedDetail"
                tools:text="@tools:sample/lorem/random" />

            <LinearLayout
                android:id="@+id/section_itemFeaturedDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_vertical_small"
                android:background="@color/shimmer_grey"
                android:elevation="3dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/siv_favicon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:id="@+id/tv_itemDateFeatureCover"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_vertical_small"
                    android:textColor="@color/shimmer_grey"
                    tools:text="CNN News - Today" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_vertical_small"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/cv_content_featured_news"
        app:layout_constraintStart_toStartOf="@id/cv_content_featured_news"
        app:layout_constraintTop_toBottomOf="@id/cv_content_featured_news">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginEnd="@dimen/margin_vertical_small"
            android:background="@color/shimmer_grey"
            app:shapeAppearance="@style/shapeableimagecutedge" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginEnd="@dimen/margin_vertical_small"
            android:background="@color/shimmer_grey"
            app:shapeAppearance="@style/shapeableimagecutedge" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginEnd="@dimen/margin_vertical_small"
            android:background="@color/shimmer_grey"
            app:shapeAppearance="@style/shapeableimagecutedge" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginEnd="@dimen/margin_vertical_small"
            android:background="@color/shimmer_grey"
            app:shapeAppearance="@style/shapeableimagecutedge" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginEnd="@dimen/margin_vertical_small"
            android:background="@color/shimmer_grey"
            app:shapeAppearance="@style/shapeableimagecutedge" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginEnd="@dimen/margin_vertical_small"
            android:background="@color/shimmer_grey"
            app:shapeAppearance="@style/shapeableimagecutedge" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginEnd="@dimen/margin_vertical_small"
            android:background="@color/shimmer_grey"
            app:shapeAppearance="@style/shapeableimagecutedge" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginEnd="@dimen/margin_vertical_small"
            android:background="@color/shimmer_grey"
            app:shapeAppearance="@style/shapeableimagecutedge" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>